--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,5 +1,6 @@
 @import './variables.less';
 @import './mixin.less';
+@import './sidebar.less';
 
 body {
     -moz-osx-font-smoothing: grayscale;
@@ -45,7 +46,7 @@ a:hover {
         height: 0;
     }
 }
-
+//main-container全局样式
 .app-main {
     min-height: 100%
 }
