--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,6 +1,7 @@
 @import './variables.less';
 @import './mixin.less';
 @import './sidebar.less';
+@import './transition.less';
 
 body {
     -moz-osx-font-smoothing: grayscale;
